Set version to 1.0.0 and display in UI

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             class="glass-panel w-full h-[4.5rem] flex items-center justify-between px-8 z-10 relative shrink-0 dark:bg-black dark:border-gray-800">
             <div class="flex items-center gap-4">
                 <img src="assets/icon.png" class="w-8 h-8 rounded-lg shadow-lg shadow-gray-500/30" alt="INDM Logo">
-                <h1 class="text-lg font-semibold text-gray-800 dark:text-white">INDM</h1>
+                <h1 class="text-lg font-semibold text-gray-800 dark:text-white">INDM <span
+                        class="text-xs font-normal text-gray-500 ml-1">v1.0.0</span></h1>
             </div>
 
             <div class="flex-1 mx-12">
